modification du titre, ajout d'images

--- a/rapport/title.tex
+++ b/rapport/title.tex
@@ -11,8 +11,7 @@
 
 % Title
 \HRule \\[0.4cm]
-{ \huge \bfseries Déploiement d'ELK pour l'analyse de log\\
-au CIRIL\\[0.4cm] }
+{ \huge \bfseries Déploiement d'ELK pour l'analyse de log\\[0.4cm] }
 
 \HRule \\[1.5cm]
 
@@ -42,7 +41,8 @@ Vincent \textsc{Delove}
     \hfill
     \includegraphics[scale=1]{kibana.png}
     \\[0.2cm]
-    LOGO CIRIL
+    \includegraphics[scale=1]{lothaire.jpg}
+    \hfill
    % \includegraphics[width=87px]{percona.png}
     %\hspace*{25mm}
     \includegraphics[scale=0.6]{elasticsearch.png}
