--- a/rapport/logstash.tex
+++ b/rapport/logstash.tex
@@ -38,8 +38,19 @@ TODO
 %nous permet de récupérer le dépot stable le plus récent.
 %Enfin des scripts d'installation sont disponible
 %dans logstash/pkg/debian
-
+Les paquets
+Elastic search fournit des paquets non officiels pour ubuntu utilisable sur
+debian
 
 
 
 \section{Utilisation basique}
+
+
+
+
+\section{Mon serveur central}
+
+
+
+\section{Monter à l'échelle}
