Ajout des sources d'installation de github

--- a/rapport/sources.tex
+++ b/rapport/sources.tex
@@ -12,6 +12,12 @@ Documentation de logstash\\
 http://logstash.net/docs/1.4.2/
 http://logstash.net/docs/1.4.2/flags
 
+Installation de logstash
+http://www.elastic.co/guide/en/elasticsearch/reference/1.4/setup-repositories.html
+\\ et un peu d'astuce ou bien \\
+https://github.com/elastic/logstash
+\\ et un peu d'huile de coude
+
 
 Debugger pour le filtre grok
 http://grokdebug.herokuapp.com/
