complément d'installation logstash et debut installtion elasticS

--- a/rapport/logstash.tex
+++ b/rapport/logstash.tex
@@ -42,6 +42,8 @@ Les paquets
 Elastic search fournit des paquets non officiels pour ubuntu utilisable sur
 debian
 
+wget -qO - https://packages.elasticsearch.org/GPG-KEY-elasticsearch | sudo apt-key add -
+
 
 
 \section{Utilisation basique}
