--- a/rapport/title.tex
+++ b/rapport/title.tex
@@ -43,9 +43,9 @@ Vincent \textsc{Delove}
     \\[0.2cm]
     \includegraphics[scale=1]{lothaire.jpg}
     \hfill
-   % \includegraphics[width=87px]{percona.png}
-    %\hspace*{25mm}
     \includegraphics[scale=0.6]{elasticsearch.png}
+    \\
+    \includegraphics[scale=0.5]{elastic.png}
 \end{figure}
 
 % Bottom of the page
