--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,10pt,one side,titlepage]{report}
+\documentclass[a4paper,12pt,one side,titlepage]{report}
 
 
 %en francais
@@ -8,16 +8,19 @@
 \usepackage[francais]{babel}
 
 
-\usepackage{listings}
+\usepackage{eurosym}
 \usepackage{geometry}
 \usepackage{graphicx}
-\usepackage{eurosym}
 \usepackage{url}
-\usepackage{pdfpages}
-\usepackage{wrapfig}
-\usepackage[hidelinks]{hyperref}
 \usepackage[acronym]{glossaries}
+\usepackage[hidelinks]{hyperref}
 \usepackage{float}
+\usepackage{lipsum}
+\usepackage{lastpage}
+\usepackage{listings}
+\usepackage{pdfpages}
+%\usepackage{titlesec}
+\usepackage{wrapfig}
 %\usepackage[top=2.5cm,bottom=2.5cm,left=2.5cm,right=2.5cm]{geometry}
 %\hypersetup{pdfborder=0}
 
@@ -69,14 +72,14 @@ xleftmargin=0.1\linewidth
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \renewcommand{\headrulewidth}{0pt}
-\fancyhead[C]{Haute Disponibilité pour le Web} 
-\fancyhead[L]{}
-\fancyhead[R]{}%\includegraphics[width=60px]{openstack-logo.png}}
+\fancyhead[C]{\footnotesize\emph{\leftmark}}
+\fancyhead[L]{\footnotesize ELK}
+\fancyhead[R]{\footnotesize Équipe réseau Lothaire}%\includegraphics[width=60px]{openstack-logo.png}}
 
 \renewcommand{\footrulewidth}{1pt}
-\fancyfoot[C]{Page \thepage} 
-\fancyfoot[L]{IUT CHARLEMAGNE}
-\fancyfoot[R]{Licence Pro ASRALL}
+\fancyfoot[C]{Page \thepage/\pageref{LastPage}} 
+\fancyfoot[L]{elastic logo}
+\fancyfoot[R]{François Dupont}
 
 
 
@@ -115,7 +118,9 @@ Remerciment 3
 \part{Introduction}
 \chapter{Gestion de projet}
 \section{Problématique}
+\lipsum
 \section{Nos objectifs}
+\chapter{Présentation des notions}
 \chapter{Définitions}
 \part{Annexes}
 \chapter{Sources/Webographie/Bibliographie}
