--- a/rapport/title.tex
+++ b/rapport/title.tex
@@ -11,7 +11,7 @@
 
 % Title
 \HRule \\[0.4cm]
-{ \huge \bfseries Déploiement d'ELK pour l'analyse de log\\[0.4cm] }
+{ \Large \bfseries Déploiement d'ELK pour l'analyse de log\\[0.4cm] }
 
 \HRule \\[1.5cm]
 
@@ -45,12 +45,12 @@ Vincent \textsc{Delove}
     \hfill
     \includegraphics[scale=0.6]{elasticsearch.png}
     \\
-    \includegraphics[scale=0.5]{elastic.png}
+    \includegraphics[scale=0.4]{elastic.png}
 \end{figure}
 
 % Bottom of the page
 \vfill
-{\Large \today}%Lundi 23 Mars 2015}
+{\today}%Lundi 23 Mars 2015}
 
 \end{center}
 \end{titlepage}
