--- a/rapport/title.tex
+++ b/rapport/title.tex
@@ -3,17 +3,18 @@
  \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
 
 %\includegraphics[width=0.15\textwidth]{debian.png}~\\[1cm]
-\includegraphics[width=0.6\textwidth]{Logo-IUT-UL.jpg}\\[1cm]
+\includegraphics[width=0.55\textwidth]{Logo-IUT-UL.jpg}\hfill
+\includegraphics[scale=0.8]{lothaire.jpg}
+\vspace{1cm}
 
-%\textsc{\LARGE University of Beer}\\[1.5cm]
-
-\textsc{\LARGE Licence ASRALL}\\[0.5cm]
+\textsc{\large Licence ASRALL}
+\vspace{0.5cm}
 
 % Title
 \HRule \\[0.4cm]
 { \Large \bfseries Déploiement d'ELK pour l'analyse de log\\[0.4cm] }
 
-\HRule \\[1.5cm]
+\HRule \\[1.0cm]
 
 % Author and supervisor
 \noindent
@@ -21,6 +22,7 @@
 \begin{flushleft} \large
 \emph{Auteur:}\\
 François \textsc{Dupont}\\
+%\Letter~test@exemple.com\\
 \end{flushleft}
 \end{minipage}%
 \begin{minipage}{0.5\textwidth}
@@ -31,26 +33,22 @@ Vincent \textsc{Delove}
 \end{minipage}
 
 %
-
-\vfill
+\vspace{1cm}
 
 \begin{figure}[h]
     \centering
     \includegraphics[scale=0.5]{logstash.png}
-    %\hspace{10mm}
-    \hfill
-    \includegraphics[scale=1]{kibana.png}
-    \\[0.2cm]
-    \includegraphics[scale=1]{lothaire.jpg}
     \hfill
     \includegraphics[scale=0.6]{elasticsearch.png}
-    \\
-    \includegraphics[scale=0.4]{elastic.png}
+    \hfill
+    \includegraphics[scale=1]{kibana.png}
+    \\[20mm]
+    \includegraphics[scale=0.5]{elastic.png}
 \end{figure}
 
+\vspace{3mm}
 % Bottom of the page
-\vfill
-{\today}%Lundi 23 Mars 2015}
+{Compilé le \today}%Lundi 23 Mars 2015}
 
 \end{center}
 \end{titlepage}
