ajout d'une source

--- a/rapport/sources.tex
+++ b/rapport/sources.tex
@@ -6,6 +6,8 @@ https://wooster.checkmy.ws/2014/04/elk-elasticsearch-logstash-kibana/
 Explications sur les moteurs d'indexation/elasticsearch\\
 https://zestedesavoir.com/articles/120/elasticsearch-maintenant-en-version-14/
 
+Articles sur les performances des SGBD vs moteurs d'indexation
+http://jolicode.com/blog/elasticsearch-comme-nouveau-standard-de-la-recherche-applicative
 
 
 Documentation de logstash\\
