Modification de la partie installation

--- a/rapport/logstash.tex
+++ b/rapport/logstash.tex
@@ -1,4 +1,6 @@
-\section{Pourquoi Logstash?}
+\section{Présentation de Logstash}
+
+\subsection{Pourquoi Logstash?}
 Logstash parce que, bien qu'un adminsys compétent soit capable d'analyser
 de façon rapide et efficace les logs d'une machine (perl+awk+sed+tail+grep)
 Face à des dizaines/milliers de hosts cette méthode ne fonctionne souffre pas
@@ -7,47 +9,59 @@ De plus il est fréquent, actuellement (cloud, application multicouche) que
 que les logs d'une machine ne suffise plus à diagnostiquer un problème.
 
 \section{Installation}
-Sur debian il n'existe pas de paquet deb déjà fait, et le seul prérequis 
-est d'avoir une version de java > 1.7.0\_45
-Pour télécharger et installer
-curl -O https://download.elasticsearch.org/logstash/logstash/logstash-1.4.2.tar.gz
+%Sur debian il n'existe pas de paquet deb déjà fait, et le seul prérequis 
+%est d'avoir une version de java > 1.7.0\_45
+%Pour télécharger et installer
+%curl -O https://download.elasticsearch.org/logstash/logstash/logstash-1.4.2.tar.gz
+%
+%tar zxvf logstash-1.4.2.tar.gz
+%
+%script before-install.sh
+%
+%sudo cp -r /home/\$USER/Downloads/logstash-1.4.2 /opt/logstash
+%
+%sudo mkdir /var/log/logstash
+%
+%script after-install.sh
+%
+%cd logstash-1.4.2
+%
+%
+%Création du path
+%
+%export PATH+=:/opt/logstash
+%
+%
+%
+%Dautres méthodes d'installation
 
-tar zxvf logstash-1.4.2.tar.gz
-
-script before-install.sh
-
-sudo cp -r /home/\$USER/Downloads/logstash-1.4.2 /opt/logstash
-
-sudo mkdir /var/log/logstash
-
-script after-install.sh
-
-cd logstash-1.4.2
-
-
-Création du path
-
-export PATH+=:/opt/logstash
-
-
-
-Dautres méthodes d'installation
-
-TODO
 %Ensuite un simple git clone https://github.com/elastic/logstash.git
 %nous permet de récupérer le dépot stable le plus récent.
 %Enfin des scripts d'installation sont disponible
 %dans logstash/pkg/debian
-Les paquets
-Elastic search fournit des paquets non officiels pour ubuntu utilisable sur
-debian
+
+
+
+Sur Debian jessie il n'existe pas de paquet officiel logstash maintenu. Il existe 
+en revanche un paquet tierce chez l'éditeur du logiciel. Le dit paquet n'est pas 
+de très bonne facture  puisqu'il nécessite l'ajout de dépendances manuelles ainsi
+qu'un rechargement de la configuration de services  \emph{systemctl daemon-reload}.
+
+Les dépendances nécessaires sont \emph{jruby} et \emph{openjdk-7-jre} les mêmes 
+que pour elasticsearch.
+
+Une autre manière de réaliser l'installation est d'ajouter les dépots logstash à 
+/etc/apt/source.list.d/logstash.list.d/logstash.list
+
+deb https://packages.elasticsearch.org/logstash/1.4/debian stable main
+
+et évidemment la clef qui va bien\footnote{blablabla une clé ça sert à balball}
 
 wget -qO - https://packages.elasticsearch.org/GPG-KEY-elasticsearch | sudo apt-key add -
 
 
 
 \section{Utilisation basique}
-
 
 
 
