--- a/rapport/elasticsearch.tex
+++ b/rapport/elasticsearch.tex
@@ -17,3 +17,11 @@ Et ici aussi le paquet est un peu approximatif puisqu'il faut rajouter certains 
 Acompleter et revoir
 p24-26
  test
+
+
+\section{Sense}
+Sense est un module permettant de faire 
+
+\subsection{Installation}
+récupérer le module https://github.com/bleskes/sense puis l'activer dans chromium
+chrome://extension developper mode
