Gros ajout de vocabulaire

--- a/rapport/glossaire.tex
+++ b/rapport/glossaire.tex
@@ -2,6 +2,38 @@
 \newglossaryentry{logs}{name={logs},
                              description={Un log c'est une buche !
 }}
+
+\newglossaryentry{cluster}{name={cluster},
+                             description={Cluster ou grappe. Un cluster est constitué d'un ou plusieurs nodes qui partagent le même \emph{cluster.name}
+}}
+
+\newglossaryentry{document}{name={document},
+                             description={Un document, dans la terminologie elasticsearch, est constitué d'un ou plusieurs nodes qui partagent le même \emph{cluster.name}
+}}
+
+\newglossaryentry{index}{name={index},
+                             description={Un index dans la terminologie est ce qui se rapproche d'une base dans le modèle relationnel \emph{classique}. 
+}}
+
+\newglossaryentry{lucene}{name={lucene},
+                             description={Apache Lucene 
+}}
+\newglossaryentry{mapping}{name={mapping},
+                             description={Le mapping. Dans la terminologie elasticsearch, un node est processus java 
+}}
+
+\newglossaryentry{node}{name={node},
+                             description={Node ou noeud. Dans la terminologie elasticsearch, un node est processus java 
+}}
+
+\newglossaryentry{shard}{name={shard},
+                             description={Shard dans la terminologie elasticsearch, un shard est une instance de lucene. Il existe des shards primaires et des shards répliqués. 
+}}
+
+\newglossaryentry{type}{name={type},
+                             description={Un type dans la terminologie elasticsearch est l'équivalent d'une table dans le modèle relationnel. Il est équivalent dans la mesure où il possède des champs contenant des valeurs
+}}
+
 %\newglossaryentry{BGP}{name={BGP},
 %                             description={BGP, Border Gateway Protocle, est un protocole d'échange de routes utilisé sur internet, il permet aux AS (autonomous systems) d'échanger leurs informations.\\
 %                             Le plus connu des mauvais usages de BGP s'est produit en février 2008 lorsque Pakistan Telecom a mal appliqué une demande de censure de YouTube, le rendant indisponible pour le monde entier pendant plusieurs heures.\\
