Ajout de vocabulaire et explication sur logstash + source cluster

--- a/rapport/glossaire.tex
+++ b/rapport/glossaire.tex
@@ -23,11 +23,11 @@
 }}
 
 \newglossaryentry{node}{name={node},
-                             description={Node ou noeud. Dans la terminologie elasticsearch, un node est processus java 
+                             description={Node ou noeud est, dans la terminologie elasticsearch, un processus  processus java lucene, c'est une instance d'elasticsearch. 
 }}
 
 \newglossaryentry{shard}{name={shard},
-                             description={Shard dans la terminologie elasticsearch, un shard est une instance de lucene. Il existe des shards primaires et des shards répliqués. 
+                             description={Dans la terminologie elasticsearch, un shard est un index ou un morceau d'index. C'est un index au sens lucene du terme. Il existe deux types de shards, des shards primaires et des shards répliqués. Un shard primaire peut indexer de nouvelles données alors qu'un shard repliqué sert seulement de failover, il peut également être utilisé pour accélérer les réponses aux requêtes.
 }}
 
 \newglossaryentry{type}{name={type},
