--- a/rapport/sources.tex
+++ b/rapport/sources.tex
@@ -21,7 +21,7 @@ https://github.com/elastic/logstash
 \\ et un peu d'huile de coude
 
 
-Debugger pour le filtre grok
+Debugger pour le filtre grok\\
 http://grokdebug.herokuapp.com/
 
 
@@ -30,6 +30,9 @@ http://www.elastic.co/guide/en/elasticsearch/reference/current/index.html\\
 http://www.elastic.co/guide/en/elasticsearch/guide/current/index.html
 http://www.elastic.co/guide/en/elasticsearch/reference/1.x/glossary.html
 
+Clustering Elasticsearch
+http://blog.trifork.com/2014/01/07/elasticsearch-how-many-shards/
+http://stackoverflow.com/questions/12409438/when-do-you-start-additional-elasticsearch-nodes
 
 
 Documentation de Kibana
