Mise en page + début de tableau de bord

--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -121,7 +121,7 @@ Remerciment 3
 
 \section{Problématique}
 La gestion de \gls{logs} est une problématique commune à presque tous les services informatique,
-tous les fournisseurs de services, toutes personnes gérant une infrastructure informatique.
+tous les fournisseurs de services, toutes personnes gérant une infrastructure informatisée.
 
 Les logs sont un outils indispensable aux dépanages et à l'anticipation de problèmes 
 inhérant à l'exploitation d'une infrastructure informatique\footnote{ici la définition
@@ -147,6 +147,7 @@ des fichiers pour facilité leur accès et leur analyse.
 
 \chapter{Gestion de projet}
 \lipsum
+\input{tableaudebord.tex}
 \section{Nos objectifs}
 \lipsum
 \chapter{Présentation des notions}
