--- a/rapport/title.tex
+++ b/rapport/title.tex
@@ -12,7 +12,7 @@
 
 % Title
 \HRule \\[0.4cm]
-{ \Large \bfseries Déploiement d'ELK pour l'analyse de log\\[0.4cm] }
+{ \Large \bfseries Analyse de log avec ELK\\[0.4cm] }
 
 \HRule \\[1.0cm]
 
